--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
 
     <!-- Post Container -->
             <div class="
-                col-lg-9 
+                col col-12
                 
                 post-container">
 
