--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,8 +16,8 @@ layout: default
 
     <!-- Post Container -->
             <div class="
-                col col-12
-                
+                col-lg-10 col-lg-offset-2
+                col-md-10 col-md-offset-2
                 post-container">
 
                 <!-- 在正文开头添加网易云音乐插件 -->
